--- a/index.html
+++ b/index.html
@@ -1,102 +1,128 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Typing Speed Test Pro</title>
+
+<!-- Chart.js CDN -->
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
 <style>
 :root {
   --bg: #0f172a;
-  --card: #020617;
-  --text: #ffffff;
-  --primary: #2563eb;
+  --card: #1e293b;
+  --text: #e2e8f0;
+  --accent: #2563eb;
+  --accent-light: #3b82f6;
+  --error: #ef4444;
+  --success: #22c55e;
 }
-
 .light {
-  --bg: #f1f5f9;
+  --bg: #f8fafc;
   --card: #ffffff;
-  --text: #020617;
+  --text: #1e293b;
+  --accent: #2563eb;
+  --accent-light: #3b82f6;
 }
 
-* {
-  box-sizing: border-box;
-  font-family: Arial, Helvetica, sans-serif;
-}
+* { box-sizing: border-box; margin: 0; padding: 0; font-family: "Inter", sans-serif; }
 
 body {
-  margin: 0;
   background: var(--bg);
   color: var(--text);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
+  transition: background .3s, color .3s;
 }
 
 .container {
+  max-width: 900px;
+  margin: 30px auto;
+  padding: 20px;
   background: var(--card);
-  width: 450px;
-  padding: 25px;
   border-radius: 12px;
-  text-align: center;
-  box-shadow: 0 10px 25px rgba(0,0,0,0.3);
+  box-shadow: 0 8px 25px rgba(0,0,0,0.3);
+  animation: fadeIn 0.5s ease-in-out;
 }
+
+h1 { text-align: center; margin-bottom: 12px; font-weight: 600; }
 
 .top-bar {
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  justify-content: space-between; align-items: center;
+  margin-bottom: 10px;
 }
 
 button, select {
-  background: var(--primary);
+  padding: 8px 14px;
   border: none;
-  color: #fff;
-  padding: 8px 12px;
-  border-radius: 5px;
+  border-radius: 6px;
   cursor: pointer;
+  background: var(--accent);
+  color: #fff;
+  font-size: 14px;
+  transition: .2s;
 }
-
-select {
-  background: #334155;
-}
+button:hover, select:hover { background: var(--accent-light); }
 
 .stats {
-  display: flex;
-  justify-content: space-between;
-  margin: 15px 0;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(90px, 1fr));
+  gap: 12px;
+  margin: 12px 0;
+  font-size: 16px;
 }
 
 #text-display {
   border: 1px solid #334155;
-  padding: 15px;
-  min-height: 110px;
-  border-radius: 5px;
-  text-align: left;
+  padding: 18px;
+  border-radius: 8px;
+  min-height: 120px;
   line-height: 1.6;
+  font-size: 18px;
+  background: var(--bg);
+  transition: border-color .3s;
 }
 
-.correct { color: #22c55e; }
-.incorrect { color: #ef4444; text-decoration: underline; }
-.active { border-bottom: 2px solid var(--primary); }
+.correct { color: var(--success); }
+.incorrect { color: var(--error); text-decoration: underline; }
+.active { border-bottom: 2px solid var(--accent); }
 
 textarea {
   width: 100%;
-  height: 90px;
-  margin-top: 10px;
-  padding: 10px;
+  height: 100px;
+  margin-top: 14px;
+  padding: 12px;
   font-size: 16px;
-  border-radius: 5px;
-  border: none;
-  resize: none;
+  border-radius: 6px;
+  border: 1px solid #334155;
   outline: none;
+  transition: border .3s;
+}
+textarea:focus { border-color: var(--accent-light); }
+
+.chart-container {
+  margin-top: 22px;
+  background: var(--card);
+  padding: 18px;
+  border-radius: 10px;
 }
 
-.footer {
-  margin-top: 10px;
+.fullscreen-btn {
+  background: none;
+  border: 1px solid var(--accent);
+  padding: 6px 10px;
   font-size: 14px;
-  opacity: 0.9;
+  border-radius: 6px;
+  color: var(--accent);
+}
+.fullscreen-btn:hover {
+  background: var(--accent);
+  color: #fff;
+}
+
+@keyframes fadeIn {
+  from { opacity: 0; transform: translateY(20px); }
+  to { opacity: 1; transform: translateY(0); }
 }
 </style>
 </head>
@@ -104,9 +130,13 @@ textarea {
 <body>
 
 <div class="container">
+
   <div class="top-bar">
-    <h2>⌨️ Typing Test</h2>
-    <button id="themeToggle">🌙</button>
+    <h1>Typing Speed Test Pro</h1>
+    <div>
+      <button id="themeToggle">🌙 Theme</button>
+      <button class="fullscreen-btn" id="fsToggle">🖵 Full Screen</button>
+    </div>
   </div>
 
   <div class="stats">
@@ -118,25 +148,24 @@ textarea {
         <option value="120">120s</option>
       </select>
     </div>
+    <div>Time Left: <span id="time">60</span>s</div>
     <div>WPM: <span id="wpm">0</span></div>
     <div>Accuracy: <span id="accuracy">100</span>%</div>
-  </div>
-
-  <div class="stats">
-    <div>Timer: <span id="time">60</span>s</div>
     <div>Best: <span id="best">0</span> WPM</div>
   </div>
 
   <div id="text-display"></div>
+  <textarea id="text-input" disabled placeholder="Start typing..."></textarea>
+  <button id="restart">Restart</button>
 
-  <textarea id="text-input" placeholder="Start typing..." disabled></textarea>
+  <div class="chart-container">
+    <canvas id="scoreChart"></canvas>
+  </div>
 
-  <button id="restart" style="margin-top:12px;">Restart</button>
-
-  <div class="footer">Built with HTML, CSS & JS</div>
 </div>
 
 <script>
+// ====== CORE LOGIC ======
 const body = document.body;
 const textDisplay = document.getElementById("text-display");
 const textInput = document.getElementById("text-input");
@@ -147,6 +176,7 @@ const restartBtn = document.getElementById("restart");
 const themeToggle = document.getElementById("themeToggle");
 const timeSelect = document.getElementById("timeSelect");
 const bestEl = document.getElementById("best");
+const fsToggle = document.getElementById("fsToggle");
 
 const paragraphs = [
   "Consistency is the key to improving your typing speed.",
@@ -155,22 +185,26 @@ const paragraphs = [
   "Practice typing daily to build muscle memory."
 ];
 
-let timer;
-let maxTime = 60;
-let timeLeft = maxTime;
-let charIndex = 0;
-let mistakes = 0;
-let isTyping = false;
+let timer, timeLeft, maxTime, charIndex, mistakes, isTyping;
+let scores = JSON.parse(localStorage.getItem("scores")) || [];
 
-bestEl.innerText = localStorage.getItem("bestWPM") || 0;
+function setBest() {
+  bestEl.innerText = localStorage.getItem("bestWPM") || 0;
+}
 
 function loadText() {
+  timeLeft = maxTime;
+  charIndex = 0;
+  mistakes = 0;
+  isTyping = false;
+  timeEl.innerText = timeLeft;
+
   const text = paragraphs[Math.floor(Math.random() * paragraphs.length)];
   textDisplay.innerHTML = "";
-  text.split("").forEach((char, index) => {
+  text.split("").forEach((char, i) => {
     const span = document.createElement("span");
     span.innerText = char;
-    if (index === 0) span.classList.add("active");
+    if (i === 0) span.classList.add("active");
     textDisplay.appendChild(span);
   });
   textInput.value = "";
@@ -183,80 +217,89 @@ function startTimer() {
     if (timeLeft > 0) {
       timeLeft--;
       timeEl.innerText = timeLeft;
-    } else {
-      clearInterval(timer);
-      textInput.disabled = true;
-      const best = Math.max(wpmEl.innerText, bestEl.innerText);
-      localStorage.setItem("bestWPM", best);
-      bestEl.innerText = best;
-    }
+    } else endTest();
   }, 1000);
 }
 
-textInput.addEventListener("keydown", (e) => {
-  const chars = textDisplay.querySelectorAll("span");
-  if (e.key === "Backspace") {
-    if (charIndex > 0) {
-      charIndex--;
-      chars[charIndex].classList.remove("correct", "incorrect");
-      chars[charIndex].classList.add("active");
-    }
-    return;
-  }
-});
+function endTest() {
+  clearInterval(timer);
+  textInput.disabled = true;
+  const wpm = parseInt(wpmEl.innerText);
+  scores.push(wpm);
+  localStorage.setItem("scores", JSON.stringify(scores));
+
+  const best = Math.max(wpm, localStorage.getItem("bestWPM") || 0);
+  localStorage.setItem("bestWPM", best);
+  setBest();
+  updateChart();
+}
 
 textInput.addEventListener("input", () => {
   const chars = textDisplay.querySelectorAll("span");
-  const typedChar = textInput.value[charIndex];
+  const typed = textInput.value[charIndex];
 
-  if (!isTyping) {
-    startTimer();
-    isTyping = true;
-  }
+  if (!isTyping) { startTimer(); isTyping = true; }
 
   if (timeLeft === 0) return;
 
-  chars.forEach(span => span.classList.remove("active"));
+  chars.forEach(s => s.classList.remove("active"));
 
-  if (typedChar === chars[charIndex].innerText) {
-    chars[charIndex].classList.add("correct");
-  } else {
-    chars[charIndex].classList.add("incorrect");
-    mistakes++;
-  }
+  if (typed === chars[charIndex]?.innerText) chars[charIndex].classList.add("correct");
+  else { chars[charIndex].classList.add("incorrect"); mistakes++; }
 
   charIndex++;
   if (chars[charIndex]) chars[charIndex].classList.add("active");
 
   const correct = charIndex - mistakes;
   const wpm = Math.round((correct / 5) / ((maxTime - timeLeft) / 60));
-  const accuracy = Math.round((correct / charIndex) * 100);
+  const acc = Math.round((correct / charIndex) * 100);
 
   wpmEl.innerText = wpm > 0 ? wpm : 0;
-  accuracyEl.innerText = accuracy > 0 ? accuracy : 100;
+  accuracyEl.innerText = acc > 0 ? acc : 100;
 });
 
-restartBtn.addEventListener("click", () => {
+restartBtn.onclick = () => {
   clearInterval(timer);
   maxTime = parseInt(timeSelect.value);
-  timeLeft = maxTime;
-  charIndex = 0;
-  mistakes = 0;
-  isTyping = false;
-
-  timeEl.innerText = maxTime;
-  wpmEl.innerText = 0;
-  accuracyEl.innerText = 100;
-
   loadText();
-});
+};
 
-themeToggle.addEventListener("click", () => {
+// ====== CHART.JS ======
+let chart;
+function updateChart() {
+  if (chart) chart.destroy();
+  const ctx = document.getElementById("scoreChart").getContext("2d");
+  chart = new Chart(ctx, {
+    type: 'line',
+    data: {
+      labels: scores.map((_,i) => `#${i+1}`),
+      datasets: [{
+        label: 'WPM History',
+        data: scores,
+        borderColor: 'var(--accent)',
+        backgroundColor: 'rgba(37,99,235,0.3)',
+        tension: 0.3
+      }]
+    }
+  });
+}
+
+// ====== THEME & FULLSCREEN ======
+themeToggle.onclick = () => {
   body.classList.toggle("light");
-  themeToggle.innerText = body.classList.contains("light") ? "☀️" : "🌙";
-});
+  themeToggle.innerText = body.classList.contains("light") ? "☀️ Theme" : "🌙 Theme";
+};
 
+fsToggle.onclick = () => {
+  if (!document.fullscreenElement) document.documentElement.requestFullscreen();
+  else document.exitFullscreen();
+};
+
+setBest();
+maxTime = parseInt(timeSelect.value);
 loadText();
+updateChart();
+
 </script>
 
 </body>
