--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 
 <div class="app-container">
     <div class="actions">
-        <h2 style="font-weight: 800; letter-spacing: -1px;">TYPER<span style="color:var(--accent)">PRO</span></h2>
+        <h2 style="font-weight: 800; letter-spacing: -1px;">TYPING<span style="color:var(--accent)">SPEED TEST</span></h2>
         <div class="btn-group">
             <select id="timeSelect">
                 <option value="15">15s</option>
@@ -210,7 +210,7 @@
 
     <div id="typing-box" onclick="focusInput()">
         <div id="ghost-caret" class="ghost-caret">
-            <span class="ghost-label">PB Ghost</span>
+            <span class="ghost-label"></span>
         </div>
         <div id="caret" class="caret"></div>
         <div id="text-render"></div>
